하이버네이트 설정 드디어 끝!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-orm</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
 				
 		<!-- AspectJ -->
 		<dependency>
@@ -94,11 +101,11 @@
 			<scope>test</scope>
 		</dependency>
 		
-        <dependency>
+		<dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.3.6.Final</version>
-        </dependency>    
+        </dependency>		    
         
         <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
 		<dependency>
@@ -127,14 +134,7 @@
 		    <artifactId>commons-dbcp</artifactId>
 		    <version>1.4</version>
 		</dependency>			
-		
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
-		<dependency>
-		    <groupId>org.springframework</groupId>
-		    <artifactId>spring-orm</artifactId>
-		    <version>4.3.5.RELEASE</version>
-		</dependency>
-		
+				
 		<!-- Hibernate library dependecy start -->
 		<dependency>
 			<groupId>dom4j</groupId>
@@ -167,7 +167,7 @@
 		    <artifactId>cubrid-jdbc-driver-9.3.6.0002</artifactId>
 		    <version>1.0.1</version>
 		</dependency>
-		     
+     
 	</dependencies>
     <build>
         <plugins>
