--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
 		<servlet-name>appServlet</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	
+
  	<filter>
 	    <filter-name>encodingFilter</filter-name>
 		<filter-class>
@@ -40,6 +40,17 @@
 		    <param-value>utf-8</param-value>
 		</init-param>
 	</filter>
+	
+ 	<filter>
+   		<filter-name>hibernateFilter</filter-name>
+    	<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>hibernateFilter</filter-name>
+	    <url-pattern>/</url-pattern>
+	</filter-mapping>
+
 	<filter-mapping>
 	    <filter-name>encodingFilter</filter-name>
 	<url-pattern>/</url-pattern>
