--- a/pom.xml
+++ b/pom.xml
@@ -167,7 +167,14 @@
 		    <artifactId>cubrid-jdbc-driver-9.3.6.0002</artifactId>
 		    <version>1.0.1</version>
 		</dependency>
-     
+		
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.0</version>
+		</dependency>
+		
 	</dependencies>
     <build>
         <plugins>
