이미지 업로드 구현중

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,13 @@
 		    <version>2.8.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+		<dependency>
+		    <groupId>org.codehaus.jackson</groupId>
+		    <artifactId>jackson-mapper-asl</artifactId>
+		    <version>1.9.13</version>
+		</dependency>
+
 	</dependencies>
     <build>
         <plugins>
